# PackageProject.cmake

./: .cmake-format  CMakeLists.txt  Config.cmake.in
test/: CMakeLists.txt  main.cpp
test/components/: CMakeLists.txt
test/components/include/components/: add.h  mult.h  number.h  pow.h
test/components/source/: add.cpp  mult.cpp  pow.cpp
test/dependency/: CMakeLists.txt
test/header_only/: CMakeLists.txt
test/namespaced_dependency/: CMakeLists.txt
test/runtime_destination_dependency/: CMakeLists.txt
test/style/: CMakeLists.txt
test/transitive_dependency/: CMakeLists.txt
